build: updated application build architecture